--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  font-family: "Verdana";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #141518;
+  color: white;
+  font-size: 1.6vw;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.black {
+  color: black;
+}
+li {
+  list-style-type: none;
+}
+.container {
+  width: 60%;
+  height: 600px;
+  margin: 100px auto;
+  background-color: #2c2f34;
+  border-radius: 4px;
+  padding-top: 40px;
+}
+
+.movie-grid {
+  display: block;
+  width: 90%;
+  background-color: #3f434a;
+  margin: auto;
+  text-align: center;
+}
+
+.image-container {
+  width: 40%;
+  display: inline-block;
+  float: left;
+}
+
+.image-container img {
+  border: 10px solid white;
+  border-radius: 2px;
+  float: left;
+}
+
+.movie-details {
+  display: inline-block;
+  text-align: left;
+  width: 60%;
 }
