--- a/src/index.css
+++ b/src/index.css
@@ -215,3 +215,82 @@ li {
   width: 18%;
   float: right;
 }
+
+@media only screen and (max-width: 400px) {
+  body {
+    font-size: 0.8em;
+  }
+  .container {
+    width: 100%;
+    height: 480px;
+    margin: 30px auto;
+    background-color: #2c2f34;
+    border-radius: 4px;
+    padding-top: 40px;
+  }
+
+  .movie-grid {
+    display: block;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .popularity label {
+    margin-left: 10px;
+  }
+
+  .watchlist-tile {
+    display: inline-block;
+    float: right;
+    padding-right: 10%;
+    margin-top: -50px;
+  }
+
+  .watchlist-container {
+    width: 90%;
+  }
+  .watchlist-movie-grid {
+    padding-left: 0;
+  }
+
+  .homepage-url {
+    display: block;
+    left: 5%;
+    top: 8%;
+  }
+
+  .movie-card {
+    position: relative;
+    width: 100%;
+    border: 2px solid #2c2f34;
+    margin-bottom: 0px;
+    border-radius: 2px;
+  }
+
+  .movie-card:hover {
+    background-color: #38393b;
+    cursor: pointer;
+  }
+
+  .movie-card:hover img {
+    opacity: 0.8;
+  }
+
+  .movie-item {
+    font-size: 1.4em;
+  }
+
+  .release-year {
+    font-size: 0.9em;
+  }
+
+  .tooltip:before {
+    font-size: 1.2em;
+  }
+
+  .tooltip.expand:before {
+    width: 75vw;
+  }
+}
